--- a/kresources/kresources_manager.desktop
+++ b/kresources/kresources_manager.desktop
@@ -3,6 +3,7 @@ Encoding=UTF-8
 Type=ServiceType
 X-KDE-ServiceType=KResources/Manager
 Comment=KResource Manager
+Comment[af]=KHulpbron bestuurder
 Comment[bg]=Мениджър на KResource
 Comment[bn]=কে-রিসোর্স ম্যানেজার
 Comment[br]=Merour KResource
@@ -15,6 +16,7 @@ Comment[et]=KResource'i haldur
 Comment[eu]=KResource kudeatzailea
 Comment[fr]=Gestionnaire de KResource
 Comment[fy]=KResource-behearder 
+Comment[he]=מנהל משאבים KResource
 Comment[hi]=के-रीसोर्स प्रबंधक
 Comment[hu]=KResource-kezelőprogram
 Comment[is]=KResource stjóri
