CVS_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdelibs/kabc/; revision=418022

--- a/kresources/kresources.desktop
+++ b/kresources/kresources.desktop
@@ -38,6 +38,7 @@ Name[pt]=Recursos do KDE
 Name[pt_BR]=Fontes de Dados do KDE
 Name[ro]=Resurse KDE
 Name[ru]=Ресурсы KDE
+Name[rw]=Ibikorana KDE
 Name[sk]=Zdroje KDE
 Name[sl]=Viri KDE
 Name[sr]=KDE-ови ресурси
@@ -87,6 +88,7 @@ Comment[pt]=Configurar Recursos do KDE
 Comment[pt_BR]=Configura as Fontes de Dados do KDE
 Comment[ro]=Configurează resursele KDE
 Comment[ru]=Настройка ресурсов KDE
+Comment[rw]=Kuboneza Ibikoraba bya KDE
 Comment[se]=Heivet KDE-resurssaid
 Comment[sk]=Nastavenie zdrojov KDE
 Comment[sl]=Nastavi vire KDE
@@ -95,6 +97,7 @@ Comment[sr@Latn]=Podešavanje KDE-ovih resursa
 Comment[sv]=Anpassa KDE-resurser
 Comment[ta]=KDE மூலங்களை கட்டமை
 Comment[tg]=Танзими манбаъи истифодашуда тавассути китоби адрес
+Comment[tr]=KDE Kaynaklarını Yapılandır
 Comment[uk]=Налаштування ресурсів KDE
 Comment[uz]=KDE манбаларини мослаш
 Comment[xx]=xxConfigure KDE Resourcesxx
@@ -130,6 +133,7 @@ Keywords[pl]=zasoby,konnector,zasoby wizytówek,zasoby kalendarze,zasoby notatek
 Keywords[pt]=recursos,recurso de conector,recurso de contacto,recurso de calendário,recurso de notas,imap
 Keywords[pt_BR]=fontes de dados,konnector,contato,conector,calendário, notas,imap
 Keywords[ro]=resurse,konnector,contact,calendar,notiţe,imap
+Keywords[rw]=ibikorana, ibikorana impuza, ibikorana aderesi, ibikorana kalindari, ibikorana impugukirwa, imap
 Keywords[se]=resurssat,konnector-resursa,oktavuohtaresursa,kaleandarresursa,nohtaresursa,imap
 Keywords[sk]=zdroje,zdroj pre konnector,zdroj kontaktov,zdroj kalendára,zdroj poznámok,imap
 Keywords[sl]=resurs,vir,stikov vir,koledarski vir,imap,
@@ -137,6 +141,7 @@ Keywords[sr]=resources,konnector resource,contact resource,calendar resource,not
 Keywords[sr@Latn]=resources,konnector resource,contact resource,calendar resource,notes resource,imap,resursi,resurs,povezivač,kontakt resurs, kalendarski resurs
 Keywords[sv]=resurser,konnector-resurs,kontaktresurs,kalenderresurs,anteckningsresurs,IMAP
 Keywords[ta]=மூலங்கள்,இணைப்பு மூலம்,தொடர்பு மூலம்,நாள்காட்டி மூலம்,குறிப்புகள் மூலம்e,imap
+Keywords[tr]=kaynaklar,bağlantı kaynağı,iletiişm kaynağı,takvim kaynak,not kaynağı,imap
 Keywords[uk]=ресурси,ресурс для konnector,ресурс контактів,ресурс календаря,ресурс приміток,imap
 Keywords[xx]=xxresources,konnector resource,contact resource,calendar resource,notes resource,imapxx
 Keywords[zh_CN]=resources,konnector resource,contact resource,calendar resource,notes resource,imap资源,konnector 资源,联系人资源,日历资源,备忘资源
