--- a/kresources/kresources_plugin.desktop
+++ b/kresources/kresources_plugin.desktop
@@ -43,6 +43,7 @@ Comment[pt]='Plugin' da Plataforma do KResource
 Comment[pt_BR]=Plug-in do KResource
 Comment[ro]=Modul cadru KResource
 Comment[ru]=Модуль подсистемы KResource
+Comment[rw]=Icomeka ry'Imiterere rya KIbikorana
 Comment[sk]=KResource Framework plugin
 Comment[sl]=Vstavek za ogrodje KResource
 Comment[sq]=Shtojca KResource Framework
@@ -51,6 +52,7 @@ Comment[sr@Latn]=Priključak KResource Framework-a
 Comment[sv]=Insticksprogram för resursramverk
 Comment[ta]=கேவழிமுறை கட்டமைப்பு சொருகுபொருள்
 Comment[tg]=Мутассалкунандаи қолабгар барои KResource
+Comment[tr]=KResource Eklentisi
 Comment[uk]=Втулок структури KResource
 Comment[uz]=KResource тўплам плагини
 Comment[xx]=xxKResource Framework Pluginxx
