SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdelibs/kresources/; revision=421061

--- a/kresources/kresources.desktop
+++ b/kresources/kresources.desktop
@@ -45,6 +45,7 @@ Name[sr]=KDE-ови ресурси
 Name[sr@Latn]=KDE-ovi resursi
 Name[sv]=KDE-resurser
 Name[ta]=KDE மூலங்கள்
+Name[tr]=KDE Kaynakları
 Name[uk]=Ресурси KDE
 Name[xx]=xxKDE Resourcesxx
 Name[zh_CN]=KDE 资源
