SVN_SILENT made messages (.desktop file)
svn path=/trunk/KDE/kdelibs/kabc/; revision=429557

--- a/kresources/kresources.desktop
+++ b/kresources/kresources.desktop
@@ -24,6 +24,7 @@ Name[et]=KDE ressursid
 Name[fr]=Ressources de KDE
 Name[fy]=KDE Helpboarnen
 Name[ga]=Acmhainní KDE
+Name[gl]=Recursos de KDE
 Name[he]=משאבים של KDE
 Name[hu]=KDE-erőforrások
 Name[is]=KDE auðlindir
@@ -69,6 +70,7 @@ Comment[fi]=Muokkaa KDE:n resursseja
 Comment[fr]=Configure les ressources de KDE
 Comment[fy]=KDE helpboarne Ynstelle
 Comment[ga]=Cumraigh Acmhainní KDE
+Comment[gl]=Configurar os recursos de KDE
 Comment[he]=תצורת משאבים של KDE
 Comment[hi]=केडीई रीसोर्सेज़ कॉन्फ़िगर करें
 Comment[hu]=A KDE-s erőforrások beállítása
@@ -119,6 +121,7 @@ Keywords[eu]=baliabideak,konnector baliabidea,contact baliabidea,egutegi baliabi
 Keywords[fi]=resurssit,konnektor-resurssi,yhteystietojen resurssi,muistiinpanojen resurssi,imap
 Keywords[fr]=resources,konnector,contact,calendrier,notes,imap,agenda,rendez-vous
 Keywords[fy]=helpboarne,ferbinings-helpboarne,kontakt-helpboarne,kalinder-helpboarne,notysje-helpboarne,imap,kontakt,kalinder,notysje,ferbining
+Keywords[gl]=recursos,recurso konnector,recurso contactos,recurso axenda,recurso notas ,recurso imap
 Keywords[he]=משאבים, konnector, לוח שנה, פתקים, imap, פתק
 Keywords[hi]=रीसोर्सेज़,कनेक्टर रीसोर्स,कॉन्टेक्ट रीसोर्स,कैलेंडर रीसोर्स,नोट्स रीसोर्स,आईमैप
 Keywords[hu]=erőforrások,csatoló-erőforrás,névjegy-erőforrás,naptár-erőforrás,feljegyzés-erőforrás,IMAP
