--- a/kresources/kresources_manager.desktop
+++ b/kresources/kresources_manager.desktop
@@ -16,6 +16,7 @@ Comment[et]=KResource'i haldur
 Comment[eu]=KResource kudeatzailea
 Comment[fr]=Gestionnaire de KResource
 Comment[fy]=KResource-behearder 
+Comment[gl]=Xestor de KResource
 Comment[he]=מנהל משאבים KResource
 Comment[hi]=के-रीसोर्स प्रबंधक
 Comment[hu]=KResource-kezelőprogram
