--- a/kresources/kresources_plugin.desktop
+++ b/kresources/kresources_plugin.desktop
@@ -21,6 +21,7 @@ Comment[eu]=KResource Framework plugina
 Comment[fa]=متصل کننده‌ی قالب‌گار برای KResource
 Comment[fi]=KResource Framework -lisäosa
 Comment[fr]=Module externe du cadre de KResource
+Comment[gl]=Plugin do entorno de KResource
 Comment[he]=קובץ מסגרת תיאור משאבים (RDF)
 Comment[hi]=केरिसोर्स फ्रेमवर्क प्लगइन
 Comment[hr]=Umetak KResource okružja
