--- a/kcal/CMakeLists.txt
+++ b/kcal/CMakeLists.txt
@@ -177,7 +177,7 @@ macro(CREATE_ICALSS_FILE _out_FILE)
     FILE(APPEND ${_out_FILE} "extern \"C\" {\n")
     FILE(APPEND ${_out_FILE} "#endif\n")
     FILE(APPEND ${_out_FILE} "/*\n")
-    FILE(APPEND ${_out_FILE} " $$''Id''$$\n")
+    FILE(APPEND ${_out_FILE} " $Id$\n")
     FILE(APPEND ${_out_FILE} "*/\n")
     foreach (_current_FILE ${COMBINEDHEADERSICALSS})
         FILE(READ ${_current_FILE} _contents)
