Use new cmake variable for kde libs
svn path=/trunk/KDE/kdepim/akregator/src/libsyndication/; revision=521391

--- a/kcal/CMakeLists.txt
+++ b/kcal/CMakeLists.txt
@@ -254,7 +254,7 @@ kde4_add_kcfg_files(kcal_LIB_SRCS htmlexportsettings.kcfgc )
 
 kde4_add_library(kcal SHARED ${kcal_LIB_SRCS})
 
-target_link_libraries(kcal  ${LIB_KDE3SUPPORT} ${QT_QTXML_LIBRARY} ktnef kmime kresources kabc  )
+target_link_libraries(kcal  ${KDE4_KDE3SUPPORT_LIBRARIES} ${QT_QTXML_LIBRARY} ktnef kmime kresources kabc  )
 
 set_target_properties(kcal PROPERTIES VERSION 2.0.0 SOVERSION 2 )
 install_targets(${LIB_INSTALL_DIR} kcal )
@@ -270,7 +270,7 @@ kde4_add_plugin(kcal_local ${kcal_local_PART_SRCS})
 
 kde4_install_libtool_file( ${PLUGIN_INSTALL_DIR} kcal_local )
 
-target_link_libraries(kcal_local  ${QT_AND_KDECORE_LIBS} kcal )
+target_link_libraries(kcal_local  ${KDE4_KDECORE_LIBS} kcal )
 
 install_targets(${LIB_INSTALL_DIR}/kde4 kcal_local )
 
@@ -285,7 +285,7 @@ kde4_add_plugin(kcal_localdir ${kcal_localdir_PART_SRCS})
 
 kde4_install_libtool_file( ${PLUGIN_INSTALL_DIR} kcal_localdir )
 
-target_link_libraries(kcal_localdir  ${QT_AND_KDECORE_LIBS} kcal )
+target_link_libraries(kcal_localdir  ${KDE4_KDECORE_LIBS} kcal )
 
 install_targets(${LIB_INSTALL_DIR}/kde4 kcal_localdir )
 
@@ -300,7 +300,7 @@ if(KDE4_BUILD_TESTS)
 
 kde4_add_executable(convertqtopia ${convertqtopia_SRCS})
 
-target_link_libraries(convertqtopia  ${QT_AND_KDECORE_LIBS} kcal )
+target_link_libraries(convertqtopia  ${KDE4_KDECORE_LIBS} kcal )
 
 endif(KDE4_BUILD_TESTS)
 
