--- a/kioslave/sieve/CMakeLists.txt
+++ b/kioslave/sieve/CMakeLists.txt
@@ -13,7 +13,7 @@ kde4_add_plugin(kio_sieve ${kio_sieve_PART_SRCS})
 
 kde4_install_libtool_file( ${PLUGIN_INSTALL_DIR} kio_sieve )
 
-target_link_libraries(kio_sieve  ${QT_AND_KDECORE_LIBS} kio )
+target_link_libraries(kio_sieve  ${KDE4_KDECORE_LIBS} kio )
 
 install_targets(${LIB_INSTALL_DIR}/kde4 kio_sieve )
 
