--- a/qgpgme/CMakeLists.txt
+++ b/qgpgme/CMakeLists.txt
@@ -14,7 +14,7 @@ kde4_automoc(${qgpgme_LIB_SRCS})
 kde4_add_library(qgpgme SHARED ${qgpgme_LIB_SRCS})
 
 #Laurent add test !
-target_link_libraries(qgpgme  ${QT_AND_KDECORE_LIBS}  gpgme++ )
+target_link_libraries(qgpgme  ${KDE4_KDECORE_LIBS}  gpgme++ )
 
 set_target_properties(qgpgme PROPERTIES VERSION 1.0.0 SOVERSION 1 )
 install_targets(${LIB_INSTALL_DIR} qgpgme )
