Now I generate all file. libkcal compiles fine
svn path=/trunk/KDE/kdepim/libkcal/; revision=521731

--- a/kcal/CMakeLists.txt
+++ b/kcal/CMakeLists.txt
@@ -181,9 +181,10 @@ macro(CREATE_ICALSS_FILE _out_FILE)
     FILE(APPEND ${_out_FILE} "*/\n")
     foreach (_current_FILE ${COMBINEDHEADERSICALSS})
         FILE(READ ${_current_FILE} _contents)
-        STRING(REGEX REPLACE "#include.*\"ical" "" _contents "${_contents}" )
-        STRING(REGEX REPLACE "#include.*\"pvl.h\"" "" _contents "${_contents}" )
-        STRING(REGEX REPLACE "\$$(Id|Locker): .+\$$" "" _contents "${_contents}" )
+    	STRING(REGEX REPLACE "#include *\"ical.*\\.h\"" "" _contents "${_contents}" )
+	    STRING(REGEX REPLACE "#include *\"pvl\\.h\"" "" _contents "${_contents}" )
+		
+		#STRING(REGEX REPLACE "\$$(Id|Locker): .+\$$" "" _contents "${_contents}" )
         FILE(APPEND ${_out_FILE} "${_contents}")
     endforeach (_current_FILE ${COMBINEDHEADERSICALSS})
     FILE(APPEND ${_out_FILE} "\n")
