Using ${KDE4_INCLUDE_DIR} in kdelibs files is wrong. The installed kdelibs headers should not be used. This commit also sets CMAKE_INCLUDE_CURRENT_DIR at the toplevel and removes many CMAKE_CURRENT_SOURCE_DIR (but not all)
Also defined kdelibs-specific macros to specify which includes are wanted in a given subdir. For instance macro_use_lib_kparts()
will include kparts and all its dependent libs. Of course the reorg coming soon will mean changes to those macros, this was mainly
an experiment to see how it would work, plus a way to simplify the CMakeLists.txt files already.

svn path=/trunk/KDE/kdelibs/kabc/; revision=522127

--- a/kresources/CMakeLists.txt
+++ b/kresources/CMakeLists.txt
@@ -2,7 +2,8 @@ kde4_header()
 
 project(kresources)
 
-include_directories( ${KDE4_INCLUDE_DIR} ${QT_INCLUDES} ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR}  )
+macro_use_lib_kio()
+include_directories( ${QT_INCLUDES} )
 
 
 ########### next target ###############
