-macro_use_lib_kio() -include_directories( ${QT_INCLUDES} ) +include_directories( ${KDE4_KIO_INCLUDES} ) Shorter, and more cmake-like, as discussed with Alex.
svn path=/trunk/KDE/kdelibs/kabc/; revision=523086

--- a/kresources/CMakeLists.txt
+++ b/kresources/CMakeLists.txt
@@ -2,8 +2,7 @@ kde4_header()
 
 project(kresources)
 
-macro_use_lib_kio()
-include_directories( ${QT_INCLUDES} )
+include_directories( ${KDE4_KIO_INCLUDES} )
 
 
 ########### next target ###############
