Cleaned-up a bit what Till posted to kde-buildsystem. This works for me and Till, so it must be correct ;>
svn path=/trunk/KDE/kdepim/libkcal/; revision=528066

--- a/kcal/CMakeLists.txt
+++ b/kcal/CMakeLists.txt
@@ -156,6 +156,7 @@ macro_additional_clean_files( ${CMAKE_SOURCE_DIR}/libkcal/libical/src/libical/ic
 add_custom_command(OUTPUT ${CMAKE_SOURCE_DIR}/libkcal/libical/src/libical/ical.h 
 		COMMAND 
 		${CMAKE_COMMAND} 
+		-DTOP:FILEPATH=${CMAKE_SOURCE_DIR}
 		-DKDE_FILE_H_FILE:FILEPATH=${CMAKE_SOURCE_DIR}/libkcal/libical/src/libical/ical.h
 		-P ${CMAKE_SOURCE_DIR}/libkcal/ical_file.cmake )
 
