Compiles and links with cmake now.
svn path=/trunk/KDE/kdepim/gpgmepp/; revision=529006

--- a/gpgme++/CMakeLists.txt
+++ b/gpgme++/CMakeLists.txt
@@ -1,8 +1,10 @@
 kde4_header()
 
-add_subdirectory( interfaces ) 
+find_package( Gpgme )
 
-include_directories( ${KDE4_INCLUDE_DIR} ${QT_INCLUDES} ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_CURRENT_BINARY_DIR}  )
+add_subdirectory( interfaces )
+
+include_directories( ${KDE4_INCLUDES} ${GPGME_INCLUDE_DIR} )
 
 
 ########### next target ###############
@@ -29,7 +31,7 @@ kde4_automoc(${gpgme_LIB_SRCS})
 kde4_add_library(gpgme++ SHARED ${gpgme_LIB_SRCS})
 
 #Laurent test it !
-target_link_libraries(gpgme++ ${KDE4_KDECORE_LIBS} gpgme gpg-error )
+target_link_libraries(gpgme++ ${KDE4_KDECORE_LIBS} ${GPGME_LIBRARIES})
 
 set_target_properties(gpgme++ PROPERTIES VERSION 1.0.0 SOVERSION 1 )
 install_targets(${LIB_INSTALL_DIR} gpgme++ )
