Actually, let's define GPGME_INCLUDES instead of GPGME_INCLUDE_DIR, just in case we have more than one path there (in the future)
svn path=/trunk/KDE/kdepim/gpgmepp/; revision=529008

--- a/gpgme++/CMakeLists.txt
+++ b/gpgme++/CMakeLists.txt
@@ -4,7 +4,7 @@ find_package( Gpgme )
 
 add_subdirectory( interfaces )
 
-include_directories( ${KDE4_INCLUDES} ${GPGME_INCLUDE_DIR} )
+include_directories( ${KDE4_INCLUDES} ${GPGME_INCLUDES} )
 
 
 ########### next target ###############
